fix: use margin instead of gap

--- a/public/infinitescroll/index.css
+++ b/public/infinitescroll/index.css
@@ -9,10 +9,10 @@
 #App {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap:0.25em;
 }
 
 #App figure {
+    margin: 0.25em;
     display:flex;
     flex-direction:column;
 }
